alterato texto do titulo do header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Teste sobre uso de GitHub Desktop</h1>
+        <h1>Teste sobre uso de GitHub Desktop em demo</h1>
     </header>
     
 </body>
