Acrescentado um paragrafo e uma imagem apenas para teste.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <header>
         <h1>Teste sobre uso de GitHub Desktop em demo</h1>
+        <p>Apenas para praticar a questão do GitHub.</p>
+        <img src="/istockphoto-1407260693-1024x1024.jpg" alt="">
     </header>
     
 </body>
