--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Teste sobre uso de GitHub Desktop em demo</h1>
         <p>Apenas para praticar a questão do GitHub.</p>
-        <img src="/istockphoto-1407260693-1024x1024.jpg" alt="">
+        <img src="/istockphoto-1407260693-1024x1024.jpg" width="100" alt="imagem de uma confirmação">
     </header>
     
 </body>
